--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,7 @@
 import '../components/GlobalStyles.astro'
 import { Footer } from '../components/Footer'
 import { FooterFunction, HeaderFunction } from '../DataImports'
-import { resolve } from "path";
-import { AstroFont } from "astro-font";
+import { AstroFont } from "astro-font";  
 import { Header } from '../components/Header'
 
 let headerData
@@ -20,80 +19,79 @@ try {
 >
 <head>
   <AstroFont
-    config={[
-      {
-        src: [],
-        name: "Ramaraja",
-        // Google Fonts URL
-        googleFontsURL: 'https://fonts.googleapis.com/css2?family=Ramaraja&display=swap',
-        preload: true,
-        display: "swap",
-        selector: "body",
-        fallback: "serif",
-      },
-      {
-          name: "Gotham",
-          src: [
-            {
-              weight: '500',
-              style: 'medium',
-              path: resolve(process.cwd(), 'public', 'fonts', 'Gotham', 'GothamMedium.woff2')
-            },
-            {
-              weight: '700',
-              style: 'bold',
-              path: resolve(process.cwd(), 'public', 'fonts', 'Gotham', 'GothamBold.woff2')
-            }
-          ],
-          preload: true,
-          display: "swap",
-          selector: "body",
-          fallback: "sans-serif",
-        },
-        {
-          name: "LTCBodoni175Pro",
-          src: [
-            {
-              weight: '400',
-              style: 'normal',
-              path: resolve(process.cwd(), 'public', 'fonts', 'LTCBodoni175Pro', 'ltc-bodoni-175-pro-regular.woff2')
-            },
-          ],
-          preload: true,
-          display: "swap",
-          selector: "body",
-          fallback: "serif",
-        },
-        {
-          name: "ProximaNova",
-          src: [
-            {
-              weight: '300',
-              style: 'light',
-              path: resolve(process.cwd(), 'public', 'fonts', 'ProximaNova', 'ProximaNova-Light.woff2')
-            },
-            {
-              weight: '400',
-              style: 'normal',
-              path: resolve(process.cwd(), 'public', 'fonts', 'ProximaNova', 'ProximaNova-Regular.woff2')
-            },
-            {
-              weight: '600',
-              style: 'semibold',
-              path: resolve(process.cwd(), 'public', 'fonts', 'ProximaNova', 'ProximaNova-Semibold.woff2')
-            },
-            {
-              weight: '700',
-              style: 'bold',
-              path: resolve(process.cwd(), 'public', 'fonts', 'ProximaNova', 'ProximaNova-Bold.woff2')
-            },
-          ],
-          preload: true,
-          display: "swap",
-          selector: "body",
-          fallback: "sans-serif",
-        },
-    ]}
+  config={[
+	{
+	  name: "Ramaraja",
+	  src: [],
+	  googleFontsURL: 'https://fonts.googleapis.com/css2?family=Ramaraja&display=swap',
+	  preload: true,
+	  display: "swap",
+	  selector: "body",
+	  fallback: "serif",
+	},
+	{
+	  name: "Gotham",
+	  src: [
+		{
+		  weight: '500',
+		  style: 'medium',
+		  path: '/fonts/Gotham/GothamMedium.woff2',
+		},
+		{
+		  weight: '700',
+		  style: 'bold',
+		  path: '/fonts/Gotham/GothamBold.woff2',
+		},
+	  ],
+	  preload: true,
+	  display: "swap",
+	  selector: "body",
+	  fallback: "sans-serif",
+	},
+	{
+	  name: "LTCBodoni175Pro",
+	  src: [
+		{
+		  weight: '400',
+		  style: 'normal',
+		  path: '/fonts/LTCBodoni175Pro/ltc-bodoni-175-pro-regular.woff2',
+		},
+	  ],
+	  preload: true,
+	  display: "swap",
+	  selector: "body",
+	  fallback: "serif",
+	},
+	{
+	  name: "ProximaNova",
+	  src: [
+		{
+		  weight: '300',
+		  style: 'light',
+		  path: '/fonts/ProximaNova/ProximaNova-Light.woff2',
+		},
+		{
+		  weight: '400',
+		  style: 'normal',
+		  path: '/fonts/ProximaNova/ProximaNova-Regular.woff2',
+		},
+		{
+		  weight: '600',
+		  style: 'semibold',
+		  path: '/fonts/ProximaNova/ProximaNova-Semibold.woff2',
+		},
+		{
+		  weight: '700',
+		  style: 'bold',
+		  path: '/fonts/ProximaNova/ProximaNova-Bold.woff2',
+		},
+	  ],
+	  preload: true,
+	  display: "swap",
+	  selector: "body",
+	  fallback: "sans-serif",
+	},
+  ]}  
   />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,9 +99,9 @@ try {
 </head>
   <body class="relative bg-gray-lightest">
     <div class="bg-white text-2xl relative">
-      <Header headerData={headerData} client:load />
+      <Header headerData={headerData.data} client:load />
       <slot />
-      <Footer footerData={footerData} />
+      <Footer footerData={footerData.data} />
     </div> 
     <script
           type="text/partytown"
