--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ import { Sleep } from '../components/Sleep';
 import { ConnectWithUs } from '../components/ConnectWithUs';
 import { Financing } from '../components/Financing'
 import { OnlinePayments } from '../components/OnlinePayments'
+import { AnimatedSection } from '../components/AnimatedSection'
 import Organizations from '../components/Organizations.astro';
+
 
 
 
@@ -92,5 +94,6 @@ try {
           <OnlinePayments onlinePaymentsData={onlinePaymentsData[0].data} />
         </div>
         <Organizations organizationsData={organizationsData[0].data} />
+        <AnimatedSection />
     </main>
 </Layout>
